Rename Eclipse project.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>test-ssh</name>
+	<name>test-rdi-with-ssh</name>
 	<comment></comment>
 	<projects>
 	</projects>
